--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,31 +4,5 @@ Home
 {% endblock %}
 {% block content %}
 <h1>Home</h1>
-<p>From Wikipedia, the free encyclopedia
-    This article is about the boiled dumplings. For the fried buns, see Pirozhki. For Eastern European pies, see Pirog.
-    Pierogi
-    Pierogi z cebulką.jpg
-    Pierogi topped with fried onion
-    Alternative names Pirohy, pyrohy, pyrogy, varenyky, vareniki
-    Type Dumpling
-    Course Appetizer, main, dessert
-    Place of origin
-    Asia (historically)[1]
-    Europe (contemporary)
-    Region or state Central Europe, Eastern Europe, Southeastern Europe
-    Main ingredients
-    Dough: flour, eggs, water
-    Filling: various
-    Cookbook: Pierogi
-    Media: Pierogi
-    Pierogi[a][b] are filled dumplings made by wrapping unleavened dough around a savory or sweet filling and cooking in
-    boiling water. They are often pan-fried before serving.
-
-    Pierogi or their varieties are associated with the cuisines of Central, Eastern and Southeastern Europe. Dumplings
-    most likely originated in Asia and came to Europe via trade in the Middle Ages.[1][2] The widely-used English name
-    pierogi was derived from Polish. In some parts of Eastern Europe they are known as varenyky.[3] Pierogi are also
-    popular in modern-day American and Canadian cuisine, where they are sometimes known under different local names.
-
-    Typical fillings include potato, cheese, quark, sauerkraut, ground meat, edible mushrooms, and/or fruits. Savory
-    pierogi are often served with a topping of sour cream, fried onions, or both.[4][5]</p>
+<p>Pierogi are filled dumplings made by wrapping unleavened dough around a savory or sweet filling and cooking in boiling water. They are often pan-fried before serving. Pierogi or their varieties are associated with the cuisines of Central, Eastern and Southeastern Europe. Dumplings most likely originated in Asia and came to Europe via trade in the Middle Ages. The widely-used English name pierogi was derived from Polish. In some parts of Eastern Europe they are known as varenyky. Pierogi are also popular in modern-day American and Canadian cuisine, where they are sometimes known under different local names. Typical fillings include potato, cheese, quark, sauerkraut, ground meat, edible mushrooms, and/or fruits. Savory pierogi are often served with a topping of sour cream, fried onions, or both.</p>
 {% endblock %}
